# static-vars-static-lib

./: .clang-format  .gitignore  .gitpod.yml  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  build.bat  build.sh  conanfile.txt  run.bat  run.sh
.circleci/: config.yml
env/: conan.cmake  conan_build_tool.cmake  emscripten.cmake
src/: Main.cpp  main.cpp  singleton_dll.c  singleton_dll.h  singleton_lib.c  singleton_lib.h  static-vars-static-lib.cpp  static-vars-static-lib.h
tests/: static-vars-static-libTest.cpp
